# SDL3-File-Functions

./: .gitignore  CMakeLists.txt  README.md
include/: game.h  input.h  player.h  renderer.h
src/: game.cpp  input.cpp  main.cpp  player.cpp  renderer.cpp
